--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,3 +1,11 @@
+h2 {
+    text-align: center;
+}
+
+form h3 {
+    text-align: left;
+}
+
 .banner {
     background-color: cornflowerblue;
     color: white;
@@ -8,14 +16,23 @@
 
 .banner h1 {
     font-family: "Roboto Mono";
+    text-align: left;
+    margin: 30px 50px 0px;
 }
 
-#small-sarah {
+.banner h3 {
+    text-align: left;
+    margin: 10px 50px 0px;
+}
+
+#profile {
     height: 200px;
     width: 135px;
+    border-radius: 60%;
+    border: 5px solid white;
 }
 
-#sarah {
+#title {
     color: cornflowerblue;
     font-size: 100px;
 }
