Added more sections, navigation bar, and contact links

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -40,3 +40,20 @@ form h3 {
 .bold {
     font-weight: 900;
 }
+
+.contact-link {
+    margin: 45px;
+    padding: 12px 50px;
+    border: 1px solid #466995;
+    border-radius: 10px;
+    text-decoration: none;
+    box-shadow: 0px 4px;
+  }
+  
+.contact-link:active {
+    margin-top: 24px;
+    margin-bottom: 16px;
+    box-shadow: 0px 0px;
+    background-color: #C0D6DF;
+    color: #ffffff;
+  }
