--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,7 +9,9 @@ form h3 {
 .nav {
     background-color: #F8AD9D;
     padding: 20px 30px;
-    
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .nav a{
@@ -76,14 +78,22 @@ form h3 {
     font-weight: 900;
 }
 
+.contact-links {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .contact-link {
-    margin: 45px;
+    margin: 5px 0px;
     padding: 12px 50px;
     border: 5px solid #FBC4AB;
     border-radius: 10px;
     text-decoration: none;
     color: #F08080;
     background-color: white;
+    font-weight: 600;
 }
 
 .contact-link a {
